# cpp-libraries

./: README.md
_template/: .gitignore  CMakeLists.txt
_template/include/: helloworld.h
_template/src/: helloworld.cpp
cli-args/: CMakeLists.txt  README.md
cli-args/include/nbg/: CMakeLists.txt  cli_args.hpp
cli-args/resources/: CMakeLists.txt
cli-args/src/nbg/: CMakeLists.txt  cli_args.cpp
etc/: etc.txt
iterator/: CMakeLists.txt  README.md
iterator/include/: iterator.hpp
iterator/include/nbg/: iterator.hpp
iterator/resources/: copy_follow_symlink.cmake
resources/: CMakeLists.txt
src/: CMakeLists.txt
template/include/: CMakeLists.txt
template/src/: hello.cpp
yaml/: CMakeLists.txt  README.md
yaml/include/nbg/: CMakeLists.txt  yaml_node.hpp
yaml/resources/: CMakeLists.txt
yaml/src/nbg/: CMakeLists.txt  yaml_node.cpp
